--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -59,7 +59,7 @@
     -->
 
     <!--TEMPLATES-->
-
+    
     <!--TEMPLATES END-->
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -74,7 +74,7 @@
           <a class="navbar-brand" href="/">Reelak</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
+          <!--ul class="nav navbar-nav">
             <li><a href="/products">Products</a></li>
             <li><a href="/events">Events</a></li>
             <li><a href="/blogs">Blogs</a></li>
@@ -87,7 +87,7 @@
               <input type="password" placeholder="Password" class="form-control">
             </div>
             <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
+          </form-->
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
