--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,29 +1,81 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
   <div class="container">
-    <h1>Hello, world!</h1>
-    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+    <h1>Films, out of the box, in everyday spaces.</h1>
+    <p>Reelak helps you engage with today’s young, modern audience through a fresh and unique take on the cinematic experience.</p>
   </div>
 </div>
 
-<div class="container">
-  <!-- Example row of columns -->
-  <div class="row">
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+<section id="services">
+  <div class="container">
+    <!-- Example row of columns -->
+    <div class="row">
+      <div class="col-md-4">
+        <h2>Film Curation</h2>
+        <p>Quirky, stirring, unforgettable films, from the vast and diverse library that is international cinema.</p>
+        <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+      </div>
+      <div class="col-md-4">
+        <h2>Space Design</h2>
+        <p>The cinema: uprooted, reimagined, and recreated within the context of everyday spaces.</p>
+        <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+     </div>
+      <div class="col-md-4">
+        <h2>Bespoke Experience</h2>
+        <p>Film, space, and everything in between: the signature Reelak experience, customised for you.</p>
+        <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+      </div>
     </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-   </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+  </div> <!-- /container -->
+</section>
+
+<section id="testimonials">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2 text-center">
+          <h2 class="section-heading">Overheard about us</h2>
+          <hr class="light">
+          <blockquote class="blockquote-reverse">
+            <p>
+              "While cinemas will shelter you from the worst of the weather elements (read: the haze), they do next to nothing to enhance your sense of adventure. That’s where Reelak steps in."
+            </p>
+            <footer><cite title="The Business Times">The Business Times</cite></footer>
+          </blockquote>
+          <blockquote>
+            <p>"Impress your date with an arthouse movie screening under the stars."</p>
+            <footer><cite title="Source Title">SG Magazine</cite></footer>
+          </blockquote>
+      </div>
     </div>
   </div>
-</div> <!-- /container -->
+</section>
+
+<section id="out-team">
+  <div class="container">
+    <!-- Example row of columns -->
+    <div class="row text-center">
+      <h2 class="section-heading">Our Team</h2>
+      <hr class="light">
+      <div class="col-md-3">
+        <h2>Prima Aulia Gusta</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p><a class="btn btn-default" href="#" role="button">TODO: change icons</a></p>
+      </div>
+      <div class="col-md-3">
+        <h2>Elaine Neo</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p><a class="btn btn-default" href="#" role="button">TODO: change icons</a></p>
+      </div>
+      <div class="col-md-3">
+        <h2>Aqila Abu</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p><a class="btn btn-default" href="#" role="button">TODO: change icons</a></p>
+      </div>
+      <div class="col-md-3">
+        <h2>Putra Muskita</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p><a class="btn btn-default" href="#" role="button">TODO: change icons</a></p>
+      </div>
+    </div>
+  </div> <!-- /container -->
+</section>
