--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -59,7 +59,7 @@
     -->
 
     <!--TEMPLATES-->
-
+    
     <!--TEMPLATES END-->
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -74,12 +74,12 @@
           <a class="navbar-brand" href="/">Reelak</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <!--ul class="nav navbar-nav">
-            <li><a href="/products">Products</a></li>
-            <li><a href="/events">Events</a></li>
-            <li><a href="/blogs">Blogs</a></li>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="/about">About</a></li>
+            <li><a href="/partners">Partnership</a></li>
+            <li><a href="/contacts">Contacts</a></li>
           </ul>
-          <form class="navbar-form navbar-right">
+          <!--form class="navbar-form navbar-right">
             <div class="form-group">
               <input type="text" placeholder="Email" class="form-control">
             </div>
@@ -94,10 +94,22 @@
 
     <%- body %>
 
-
-    <footer class="container">
-      <hr>
-      <p>&copy; 2017 Reelak Cinema, Inc.</p>
+    <footer>
+      <div class="container">
+        <ul class="list-inline">
+          <li>
+            <a href="https://github.com/twbs/bootstrap">Press Enquiry</a>
+          </li>
+          <li>
+            <a href="https://twitter.com/getbootstrap">Partnerships</a>
+          </li>
+          <li>
+            <a href="../getting-started/#examples">Social Media Links</a>
+          </li>
+        </ul>
+        <hr>
+        <p>&copy; 2017 Reelak Cinema, Inc.</p>
+      </div>
     </footer>
 
     <!--
