update homepage as per rach layout

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -4,6 +4,37 @@ body {
   padding-bottom: 20px;
 }
 
-section {
-  padding: 100px 0;
+.jumbotron, section {
+  /*padding: 100px 0;*/
+  height: 100vh;
+  width: 100vw;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  text-align: center;
+}
+
+.newsletter-container {
+  text-align: left;
+}
+
+.footer-links .pull-right {
+  text-align: right;
+}
+
+/* Override Bootstrap Vars */
+@media screen and (min-width: 768px) {
+  .carousel-indicators {
+    bottom: 0;
+  }
+}
+
+.carousel-indicators li {
+  background-color: pink;
+  background-color: rgba(30, 53, 96, 0.5);
+}
+
+.carousel-indicators .active {
+  background-color: pink;
+  background-color: rgb(30, 53, 96);
 }
