--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -95,9 +95,30 @@
     <%- body %>
 
 
-    <footer class="container">
+    <footer>
+      <div class="container footer-links">
+        <div class="row">
+          <a href="#" class="h1">Reelak</a>
+          <div class="pull-right">
+            <ul class="list-inline">
+              <li>hello@reelak.com</li>
+              <li>facebook</li>
+              <li>instagram</li>
+            </ul>
+            <ul class="list-inline">
+              <li>press enquiries</li>
+              <li>partnership</li>
+              <li>terms and conditions</li>
+            </ul>
+          </div>
+        </div>
+      </div>
       <hr>
-      <p>&copy; 2017 Reelak Cinema, Inc.</p>
+      <div class="container footer-row">
+        <div class="row">
+          <p>&copy; 2017 Reelak Cinema, Inc.</p>
+        </div>
+      </div>
     </footer>
 
     <!--
@@ -127,6 +148,7 @@
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/dependencies/jquery-3.2.0.min.js"></script>
     <script src="/js/dependencies/bootstrap.min.js"></script>
+    <script src="/js/script.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
