--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -62,7 +62,9 @@
 
     <!--TEMPLATES END-->
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+
+
+    <!--nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -75,11 +77,11 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <!--li><a href="/about">About</a></li>
+            <li><a href="/about">About</a></li>
             <li><a href="/partners">Partnership</a></li>
-            <li><a href="/contacts">Contacts</a></li-->
+            <li><a href="/contacts">Contacts</a></l>
           </ul>
-          <!--form class="navbar-form navbar-right">
+          <form class="navbar-form navbar-right">
             <div class="form-group">
               <input type="text" placeholder="Email" class="form-control">
             </div>
@@ -87,10 +89,49 @@
               <input type="password" placeholder="Password" class="form-control">
             </div>
             <button type="submit" class="btn btn-success">Sign in</button>
-          </form-->
-        </div><!--/.navbar-collapse -->
+          </form>
+        </div></.navbar-collapse>
       </div>
-    </nav>
+    </nav-->
+    <header>
+      <div class="nav-wrapper">
+        <div class="nav-absolute">
+          <div class="container-fluid">
+            <h1 class="h1"><a href="/">Reelak</a></h1>
+            <a href="#" class="menu-opener"><span>Menu</span></a>
+          </div>
+        </div>
+        <nav class="nav-hidden">
+          <div class="container">
+            <ul class="list-unstyled list-inline">
+              <li class="module of_3">
+                <h2>About</h2>
+                <ul class="list-unstyled">
+                  <li><a href="#">Meet the Team</a></li>
+                </ul>
+              </li>
+              <li class="module of_3">
+                <h2>Our Services</h2>
+                <ul class="list-unstyled">
+                  <li><a href="#">Films</a></li>
+                  <li><a href="#">Workshops</a></li>
+                  <li><a href="#">Tools</a></li>
+                </ul>
+              </li>
+              <li class="module of_3">
+                <h2>Events</h2>
+                <ul class="list-unstyled">
+                  <li><a href="#">Blog</a></li>
+                </ul>
+              </li>
+              <li class="module of_3">
+                <h2>Contact</h2>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </header>
 
     <%- body %>
 
