--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -59,7 +59,7 @@
     -->
 
     <!--TEMPLATES-->
-
+    
     <!--TEMPLATES END-->
 
 
@@ -95,39 +95,41 @@
     </nav-->
     <header>
       <div class="nav-wrapper">
-        <div class="nav-absolute">
+        <div class="nav-pointer">
           <div class="container-fluid">
             <h1 class="h1"><a href="/">Reelak</a></h1>
             <a href="#" class="menu-opener"><span>Menu</span></a>
           </div>
         </div>
-        <nav class="nav-hidden">
+        <nav class="nav-absolute">
           <div class="container">
-            <ul class="list-unstyled list-inline">
-              <li class="module of_3">
-                <h2>About</h2>
-                <ul class="list-unstyled">
-                  <li><a href="#">Meet the Team</a></li>
-                </ul>
-              </li>
-              <li class="module of_3">
-                <h2>Our Services</h2>
-                <ul class="list-unstyled">
-                  <li><a href="#">Films</a></li>
-                  <li><a href="#">Workshops</a></li>
-                  <li><a href="#">Tools</a></li>
-                </ul>
-              </li>
-              <li class="module of_3">
-                <h2>Events</h2>
-                <ul class="list-unstyled">
-                  <li><a href="#">Blog</a></li>
-                </ul>
-              </li>
-              <li class="module of_3">
-                <h2>Contact</h2>
-              </li>
-            </ul>
+            <div class="row">
+              <ul class="list-unstyled list-inline col-md-offset-2 accordion-menu">
+                <li class="module of_3">
+                  <h2>About</h2>
+                  <ul class="list-unstyled">
+                    <li><a href="#">Meet the Team</a></li>
+                  </ul>
+                </li>
+                <li class="module of_3">
+                  <h2>Our Services</h2>
+                  <ul class="list-unstyled">
+                    <li><a href="#">Films</a></li>
+                    <li><a href="#">Workshops</a></li>
+                    <li><a href="#">Tools</a></li>
+                  </ul>
+                </li>
+                <li class="module of_3">
+                  <h2>Events</h2>
+                  <ul class="list-unstyled">
+                    <li><a href="#">Blog</a></li>
+                  </ul>
+                </li>
+                <li class="module of_3">
+                  <h2>Contact</h2>
+                </li>
+              </ul>
+            </div>
           </div>
         </nav>
       </div>
