stabilize on slick js

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -32,6 +32,8 @@
     <link rel="stylesheet" href="/styles/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/slick-theme.min.css">
+    <link rel="stylesheet" href="/styles/slick.min.css">
     <link rel="stylesheet" href="/styles/style.css">
     <!--STYLES END-->
   </head>
@@ -190,6 +192,7 @@
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/dependencies/jquery-3.2.0.min.js"></script>
     <script src="/js/dependencies/bootstrap.min.js"></script>
+    <script src="/js/dependencies/slick.min.js"></script>
     <script src="/js/script.js"></script>
     <!--SCRIPTS END-->
   </body>
