--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -77,7 +77,7 @@
   </div>
 </section>
 
-<section id="event-reel">
+<!--section id="event-reel">
   <div class="container">
     <div class="row text-center">
       <h2 class="section-heading">Event Reel</h2>
@@ -114,36 +114,18 @@
           </a>
         </div>
       </div>
-      <!--div class="col-md-3">
-        <h2>Prima Aulia Gusta</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p><a class="btn btn-primary" href="#" role="button">TODO: change icons</a></p>
-      </div>
-      <div class="col-md-3">
-        <h2>Elaine Neo</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p><a class="btn btn-primary" href="#" role="button">TODO: change icons</a></p>
-      </div>
-      <div class="col-md-3">
-        <h2>Aqila Abu</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p><a class="btn btn-primary" href="#" role="button">TODO: change icons</a></p>
-      </div>
-      <div class="col-md-3">
-        <h2>Putra Muskita</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p><a class="btn btn-primary" href="#" role="button">TODO: change icons</a></p>
-      </div>
-    </div-->
   </div>
-</section>
+</section-->
 
 <!-- TODO: Partialize this -->
 <section id="newsletter">
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
-        <img src="https://unsplash.it/458/354" alt="">
+      <div class="col-md-6 reelak-ig">
+        <div><img src="/images/carousel1.jpg" width="500" alt=""></div>
+        <div><img src="/images/carousel2.jpg" width="500" alt=""></div>
+        <div><img src="/images/carousel3.jpg" width="500" alt=""></div>
+        <div><img src="/images/carousel4.jpg" width="500" alt=""></div>
       </div>
       <div class="col-md-6 newsletter-container">
         <h2>Subscribe to our newsletter!</h2>
