putting anchor link to each div

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,5 +1,5 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
-<div class="jumbotron">
+<div id="hero" class="jumbotron">
   <div class="container">
     <h1>Films, out of the box, in everyday spaces.</h1>
   </div>
