setup smooth scrolling

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -116,7 +116,7 @@
                 <li class="module of_3">
                   <h2>Our Services</h2>
                   <ul class="list-unstyled">
-                    <li><a href="#">Films</a></li>
+                    <li><a href="#newsletter">Films</a></li>
                     <li><a href="#">Workshops</a></li>
                     <li><a href="#">Tools</a></li>
                   </ul>
