--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,7 +1,7 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div id="hero" class="jumbotron">
   <div class="container">
-    <h1>Films, out of the box, in everyday spaces.</h1>
+    <h1 id="click">Films, out of the box, in everyday spaces.</h1>
   </div>
 </div>
 <section id="subheading">
@@ -122,10 +122,10 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 reelak-ig">
-        <div><img src="/images/carousel1.jpg" width="500" alt=""></div>
-        <div><img src="/images/carousel2.jpg" width="500" alt=""></div>
-        <div><img src="/images/carousel3.jpg" width="500" alt=""></div>
-        <div><img src="/images/carousel4.jpg" width="500" alt=""></div>
+        <div><img data-lazy="/images/carousel1.jpg" width="500" alt=""></div>
+        <div><img data-lazy="/images/carousel2.jpg" width="500" alt=""></div>
+        <div><img data-lazy="/images/carousel3.jpg" width="500" alt=""></div>
+        <div><img data-lazy="/images/carousel4.jpg" width="500" alt=""></div>
       </div>
       <div class="col-md-6 newsletter-container">
         <h2>Subscribe to our newsletter!</h2>
