--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -61,7 +61,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+
     <!--TEMPLATES END-->
 
 
@@ -114,21 +114,21 @@
                   </ul>
                 </li>
                 <li class="module of_3">
-                  <h2>Our Services</h2>
-                  <ul class="list-unstyled">
+                  <h2><a href="#services">Our Services</a></h2>
+                  <!--ul class="list-unstyled">
                     <li><a href="#newsletter">Films</a></li>
                     <li><a href="#">Workshops</a></li>
                     <li><a href="#">Tools</a></li>
-                  </ul>
+                  </ul-->
                 </li>
                 <li class="module of_3">
-                  <h2>Events</h2>
-                  <ul class="list-unstyled">
+                  <h2><a href="#newsletter">Events</a></h2>
+                  <!--ul class="list-unstyled">
                     <li><a href="#">Blog</a></li>
-                  </ul>
+                  </ul-->
                 </li>
                 <li class="module of_3">
-                  <h2>Contact</h2>
+                  <h2><a href="#footer">Contact</a></h2>
                 </li>
               </ul>
             </div>
@@ -139,7 +139,7 @@
 
     <%- body %>
 
-    <footer>
+    <footer id="footer">
       <div class="container footer-links">
         <div class="row">
           <a href="#" class="h1">Reelak</a>
