--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,7 +1,7 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div id="hero" class="jumbotron">
   <div class="container">
-    <h1 id="click">Films, out of the box, in everyday spaces.</h1>
+    <h1>Films, out of the box, in everyday spaces.</h1>
   </div>
 </div>
 <section id="subheading">
