--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -69,6 +69,10 @@
   text-align: right;
 }
 
+footer:focus {
+  outline: none;
+}
+
 /* Override Bootstrap Vars */
 @media screen and (min-width: 768px) {
   .carousel-indicators {
