--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,10 +1,10 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
-<div id="hero" class="jumbotron">
+<div id="hero" class="jumbotron horizontal-center">
   <div class="container">
     <h1>Films, out of the box, in everyday spaces.</h1>
   </div>
 </div>
-<section id="subheading">
+<section id="subheading" class="horizontal-center">
   <div class="container">
     <p class="lead">
       Reelak helps you engage with today’s young, modern audience through a fresh and unique take on the cinematic experience.
@@ -16,7 +16,7 @@
     </p>
   </div>
 </section>
-<section id="services">
+<section id="services" class="horizontal-center">
   <div class="container">
     <!-- Example row of columns -->
     <div class="row">
@@ -39,7 +39,7 @@
   </div> <!-- /container -->
 </section>
 
-<section id="testimonials">
+<section id="testimonials" class="horizontal-center">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -118,7 +118,7 @@
 </section-->
 
 <!-- TODO: Partialize this -->
-<section id="newsletter">
+<section id="newsletter" class="horizontal-center">
   <div class="container">
     <div class="row">
       <div class="col-md-6 reelak-ig">
