--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -61,7 +61,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+
     <!--TEMPLATES END-->
 
 
@@ -110,7 +110,7 @@
                 <li class="module of_3">
                   <h2><a href="/about">About</a></h2>
                   <ul class="list-unstyled">
-                    <li><a href="#meet-the-team">Meet the Team</a></li>
+                    <li><a href="/about#meet-the-team">Meet the Team</a></li>
                   </ul>
                 </li>
                 <li class="module of_3">
