--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -114,9 +114,9 @@
   background-color: rgb(30, 53, 96);
 }
 
-.nonhome-page section {
+/*.nonhome-page section {
   padding: 25px 0 50px;
-}
+}*/
 
 #partner-cta, #contact-page {
   text-align: center;
