--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -61,7 +61,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+
     <!--TEMPLATES END-->
 
 
@@ -114,7 +114,7 @@
                   </ul>
                 </li>
                 <li class="module of_3">
-                  <h2><a href="#services">Our Services</a></h2>
+                  <h2><a href="/#services">Our Services</a></h2>
                   <!--ul class="list-unstyled">
                     <li><a href="#newsletter">Films</a></li>
                     <li><a href="#">Workshops</a></li>
@@ -128,7 +128,7 @@
                   </ul-->
                 </li>
                 <li class="module of_3">
-                  <h2><a href="#footer">Contact</a></h2>
+                  <h2><a href="/contact">Contact</a></h2>
                 </li>
               </ul>
             </div>
