minor setup for homepage

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -143,23 +143,33 @@
     <section id="newsletter">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 reelak-ig">
-            <div><img data-lazy="/images/carousel1.jpg" width="500" alt=""></div>
-            <div><img data-lazy="/images/carousel2.jpg" width="500" alt=""></div>
-            <div><img data-lazy="/images/carousel3.jpg" width="500" alt=""></div>
-            <div><img data-lazy="/images/carousel4.jpg" width="500" alt=""></div>
+          <div class="col-md-12 text-center">
+            <img src="https://unsplash.it/200/200" alt="200">
+            <img src="https://unsplash.it/200/200" alt="200">
+            <img src="https://unsplash.it/200/200" alt="200">
+            <!--div><img data-lazy="/images/carousel1.jpg" width="300" alt=""></div>
+            <div><img data-lazy="/images/carousel2.jpg" width="300" alt=""></div>
+            <div><img data-lazy="/images/carousel3.jpg" width="300" alt=""></div>
+            <div><img data-lazy="/images/carousel4.jpg" width="300" alt=""></div-->
           </div>
-          <div class="col-md-6 newsletter-container">
-            <h2>Subscribe to our newsletter!</h2>
-            <p>
-              Be the first the hear about our new offerings and keep up to date with
-              our events.
+          <!--div class="col-md-3">
+          </div>
+          <div class="col-md-3">
+          </div-->
+        </div>
+        <div class="row">
+          <div class="col-md-8 col-md-offset-2 newsletter-container">
+            <h2 class="text-center">
+              See what we're up to, follow us on <a href="#" target="_blank">Instagram</a>
+            </h2>
+            <p class="text-center">
+              Be the first the hear about our new offerings and keep up to date with our events.
             </p>
-            <form>
+            <form class="text-center">
               <div class="form-group">
                 <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
               </div>
-              <button type="submit" class="btn btn-primary">Sign up</button>
+              <button type="submit" class="btn btn-primary">Subscribe</button>
             </form>
           </div>
         </div>
@@ -169,25 +179,40 @@
     <footer id="footer">
       <div class="container footer-links">
         <div class="row">
-          <a href="#" class="h1">Reelak</a>
-          <div class="pull-right">
-            <ul class="list-inline">
-              <li>hello@reelak.com</li>
-              <li>facebook</li>
-              <li>instagram</li>
-            </ul>
-            <ul class="list-inline">
-              <li>press enquiries</li>
-              <li>partnership</li>
-              <li>terms and conditions</li>
-            </ul>
+          <div class="col-md-4">
+            <p>
+              For all your enquiries:<br>
+              <span class="h2">
+                <a href="mailto:hello@reelak.com" target="_blank">hello@reelak.com</a>
+              </span>
+            </p>
+          </div>
+          <div class="col-md-4">
+            <p>
+              Follow us:<br>
+              <span class="h2">
+                <a href="#" target="_blank">
+                  Facebook
+                </a> / <a href="#" target="_blank">
+                  Instagram
+                </a>
+              </span>
+            </p>
+          </div>
+          <div class="col-md-4 pull-right">
+            <a href="#" class="h1">Reelak</a>
           </div>
         </div>
       </div>
       <hr>
       <div class="container footer-row">
-        <div class="row">
-          <p>&copy; 2017 Reelak Cinema, Inc.</p>
+        <div class="row small">
+          <ul class="list-inline">
+            <li>press enquiries</li>
+            <li>partnership</li>
+            <li>terms and conditions</li>
+          </ul>
+          <p class="pull-right">&copy; 2017 Reelak Cinema, Inc.</p>
         </div>
       </div>
     </footer>
