--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -61,7 +61,7 @@
     -->
 
     <!--TEMPLATES-->
-
+    
     <!--TEMPLATES END-->
 
 
@@ -106,14 +106,14 @@
         <nav class="nav-absolute">
           <div class="container">
             <div class="row">
-              <ul class="list-unstyled list-inline col-md-offset-2 accordion-menu">
-                <li class="module of_3">
+              <ul class="list-unstyled accordion-menu text-center">
+                <li class="col-md-12">
                   <h2><a href="/about">About</a></h2>
                   <ul class="list-unstyled">
                     <li><a href="/about#meet-the-team">Meet the Team</a></li>
                   </ul>
                 </li>
-                <li class="module of_3">
+                <li class="col-md-12">
                   <h2><a href="/#services">Our Services</a></h2>
                   <!--ul class="list-unstyled">
                     <li><a href="#newsletter">Films</a></li>
@@ -121,13 +121,13 @@
                     <li><a href="#">Tools</a></li>
                   </ul-->
                 </li>
-                <li class="module of_3">
+                <li class="col-md-12">
                   <h2><a href="#newsletter">Events</a></h2>
                   <!--ul class="list-unstyled">
                     <li><a href="#">Blog</a></li>
                   </ul-->
                 </li>
-                <li class="module of_3">
+                <li class="col-md-12">
                   <h2><a href="/contact">Contact</a></h2>
                 </li>
               </ul>
@@ -211,8 +211,8 @@
             <li>press enquiries</li>
             <li>partnership</li>
             <li>terms and conditions</li>
+            <li class="pull-right">&copy; 2017 Reelak Cinema, Inc.</li>
           </ul>
-          <p class="pull-right">&copy; 2017 Reelak Cinema, Inc.</p>
         </div>
       </div>
     </footer>
