--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -61,7 +61,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+
     <!--TEMPLATES END-->
 
 
@@ -109,9 +109,9 @@
               <ul class="list-unstyled accordion-menu text-center">
                 <li class="col-md-12">
                   <h2><a href="/about">About</a></h2>
-                  <ul class="list-unstyled">
+                  <!--ul class="list-unstyled">
                     <li><a href="/about#meet-the-team">Meet the Team</a></li>
-                  </ul>
+                  </ul-->
                 </li>
                 <li class="col-md-12">
                   <h2><a href="/#services">Our Services</a></h2>
