update layout links and navi links

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -208,9 +208,9 @@
       <div class="container footer-row">
         <div class="row small">
           <ul class="list-inline">
-            <li>press enquiries</li>
+            <!--li>press enquiries</li>
             <li>partnership</li>
-            <li>terms and conditions</li>
+            <li>terms and conditions</li-->
             <li class="pull-right">&copy; 2017 Reelak Cinema, Inc.</li>
           </ul>
         </div>
