--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -4,7 +4,7 @@
     <h1>Films, out of the box, in everyday spaces.</h1>
   </div>
 </div>
-<section id="subheading" class="horizontal-center">
+<section id="services" class="horizontal-center">
   <div class="container">
     <p class="lead">
       Reelak helps you engage with today’s young, modern audience through a fresh and unique take on the cinematic experience.
