add in subhero images

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -4,6 +4,11 @@
     <h1>Films, out of the box, in everyday spaces.</h1>
   </div>
 </div>
+
+<div class="container-fluid no-padding">
+  <img src="images/cropped-subhero.jpg" alt="subhero-image">
+</div>
+
 <section id="services" class="horizontal-center">
   <div class="container">
     <p class="lead">
