--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -81,6 +81,10 @@
   padding-right: 0;
 }
 
+.no-padding img {
+  width: 100%;
+}
+
 /* Override Bootstrap Vars */
 @media screen and (min-width: 768px) {
   .carousel-indicators {
